changed hero image and fixed styling on small screens

--- a/css/main.css
+++ b/css/main.css
@@ -1,11 +1,5 @@
 /*! HTML5 Boilerplate v8.0.0 | MIT License | https://html5boilerplate.com/ */
 
-/* main.css 2.1.0 | MIT License | https://github.com/h5bp/main.css#readme */
-/*
- * What follows is the result of much research on cross-browser styling.
- * Credit left inline and big thanks to Nicolas Gallagher, Jonathan Neal,
- * Kroc Camen, and the H5BP dev community and team.
- */
 
 /* ==========================================================================
    Base styles: opinionated defaults
@@ -212,7 +206,7 @@ nav li a{
 
 h1 {
   font-family: 'Great Vibes', cursive;
-  font-size: 3em;
+  font-size: 2.5em;
   color: #3c0000ff;
 }
 
@@ -317,22 +311,19 @@ i {
 
 
 
-
-
-
-/*---------mobile settings-------*/
+/* Nav and Hero section */
 .nav-bar{
   padding-bottom: 20px;
   width: 100%;
 }
 .hero-area {
-  background: url('../img/hero.jpg')  no-repeat scroll  center;
+  background: url('../img/hero.jpg')  no-repeat scroll  top left;
   background-size: cover;
   height: 450px;
 }
 
 .hero-area h1 {
-  padding-top: 100px;
+  padding-top: 150px;
   margin: 0 0 0 15px;
   width: 90%;  
 }
@@ -485,7 +476,7 @@ i {
      width: 60%;
   }
   .hero-area h1 {
-    padding: 200px 0 0 30%;
+    padding: 160px 0 0 30%;
     margin: 0;
     width: auto;
   }
@@ -562,7 +553,7 @@ i {
   }
 }
 
-
+  /*--------large screen settings-------*/
 
 @media only screen and (min-width: 1200px) {
   html{
@@ -571,6 +562,10 @@ i {
 
   body {
     max-width:85%;
+  }
+  /* General */
+  h1 {
+    font-size: 3em;
   }
 
   header {
